<?xml version="1.0" encoding="utf-8"?>
<Button android:id="@+id/clothes_tag"
    android:layout_width="wrap_content"
    android:layout_height="28dp"
    android:background="@drawable/button_category"
    android:elevation="2dp"
    android:text="clothes"
    android:textColor="@color/colorPrimaryWhite"
    xmlns:android="http://schemas.android.com/apk/res/android" />